updated to debian-base-gui:3.0.5, new licensing, renamed and moved scripts to better location

--- a/versions/1.0.6/Dockerfile
+++ b/versions/1.0.6/Dockerfile
@@ -2,12 +2,13 @@
 # =========================================================================
 #
 #	Dockerfile
-#	  Dockerfile for Libre Office in a Debian docker image.
+#	  Dockerfile for Libre Office 6.0.3.2 
+#		in a Debian 9 docker image.
 #
 # =========================================================================
 #
 # @author Jay Wheeler.
-# @version 1.0.7
+# @version 1.0.6
 # @copyright © 2017, 2018. EarthWalk Software.
 # @license Licensed under the GNU General Public License, GPL-3.0-or-later.
 # @package debian-libreoffice
@@ -36,7 +37,7 @@
 #
 # =========================================================================
 # =========================================================================
-FROM ewsdocker/debian-base-gui:3.0.5
+FROM ewsdocker/debian-base-gui:3.0.3
 
 MAINTAINER Jay Wheeler <EarthWalkSoftware@gmail.com>
 
@@ -72,8 +73,10 @@ ENV OFFICE_REL=6.0
 #
 # =========================================================================
 
-#ENV OFFICE_HOST=http://mirror.switch.ch/ftp/mirror/tdf/libreoffice/stable/${OFFICE_VER}/deb/x86_64
-ENV OFFICE_HOST=http://pkgnginx
+ENV OFFICE_HOST=http://mirror.switch.ch/ftp/mirror/tdf/libreoffice/stable/${OFFICE_VER}/deb/x86_64
+#ENV OFFICE_HOST=http://pkgnginx
+
+# =========================================================================
 
 ENV OFFICE_PKG=LibreOffice_${OFFICE_VER}_Linux_x86-64_deb.tar.gz
 ENV OFFICE_DIR=LibreOffice_${OFFICE_VER}.2_Linux_x86-64_deb
@@ -82,10 +85,7 @@ ENV OFFICE_URL=${OFFICE_HOST}/${OFFICE_PKG}
 
 # =========================================================================
 
-ENV LMSBUILD_VERSION="1.0.7"
-ENV LMSBUILD_NAME="debian-libreoffice" 
-ENV LMSBUILD_DOCKER="ewsdocker/${LMSBUILD_NAME}:${LMSBUILD_VERSION}" 
-ENV LMSBUILD_PACKAGE="debian-base-gui:3.0.5, LibreOffice v ${OFFICE_VER}"
+COPY scripts/. /
 
 # =========================================================================
 
@@ -93,6 +93,7 @@ RUN apt-get -y update \
  && apt-get -y upgrade  \
  && apt-get install -y --no-install-recommends \
             openjdk-8-jre \
+ && chmod -R 775 /libreoffice  \
  && mkdir -p /usr/local/share/libreoffice \
  && cd /usr/local/share/libreoffice \
  && wget ${OFFICE_URL} \ 
@@ -101,12 +102,7 @@ RUN apt-get -y update \
  && rm -R /usr/local/share/libreoffice \
  && apt-get clean all \
  && ln -s /opt/libreoffice${OFFICE_REL}/program/soffice /usr/bin/libreoffice \ 
- && PATH=$PATH:/opt/libreoffice${OFFICE_VER}/program \
- && printf "${LMSBUILD_DOCKER} (${LMSBUILD_PACKAGE}), %s @ %s\n" `date '+%Y-%m-%d'` `date '+%H:%M:%S'` >> /etc/ewsdocker-builds.txt 
-
-# =========================================================================
-
-COPY scripts/. /
+ && PATH=$PATH:/opt/libreoffice${OFFICE_VER}/program 
 
 # =========================================================================
 
