--- a/versions/1.0.7/Dockerfile
+++ b/versions/1.0.7/Dockerfile
@@ -7,7 +7,7 @@
 # =========================================================================
 #
 # @author Jay Wheeler.
-# @version 1.1.0
+# @version 1.0.7
 # @copyright © 2017, 2018. EarthWalk Software.
 # @license Licensed under the GNU General Public License, GPL-3.0-or-later.
 # @package debian-libreoffice
@@ -49,11 +49,11 @@ ENV DEBIAN_FRONTEND noninteractive
 #         command.
 #
 # =========================================================================
-ENV OFFICE_VER=6.0.3 
-ENV OFFICE_REL=6.0
+#ENV OFFICE_VER=6.0.3 \
+#    OFFICE_REL=6.0
 
-#ENV OFFICE_VER=5.4.6 
-#ENV OFFICE_REL=5.4
+ENV OFFICE_VER=5.4.6 \
+    OFFICE_REL=5.4
 
 # =========================================================================
 #
@@ -72,16 +72,16 @@ ENV OFFICE_REL=6.0
 #
 # =========================================================================
 
-#ENV OFFICE_HOST=http://mirror.switch.ch/ftp/mirror/tdf/libreoffice/stable/${OFFICE_VER}/deb/x86_64
-ENV OFFICE_HOST=http://pkgnginx
+ENV OFFICE_HOST=http://mirror.switch.ch/ftp/mirror/tdf/libreoffice/stable/${OFFICE_VER}/deb/x86_64
+#ENV OFFICE_HOST=http://pkgnginx
 
-ENV OFFICE_PKG=LibreOffice_${OFFICE_VER}_Linux_x86-64_deb.tar.gz 
-ENV OFFICE_DIR=LibreOffice_${OFFICE_VER}.2_Linux_x86-64_deb 
-ENV OFFICE_URL=${OFFICE_HOST}/${OFFICE_PKG} 
-ENV LMSBUILD_VERSION="1.1.0" 
-ENV LMSBUILD_NAME="debian-libreoffice" 
-ENV LMSBUILD_DOCKER="ewsdocker/${LMSBUILD_NAME}:${LMSBUILD_VERSION}" 
-ENV LMSBUILD_PACKAGE="debian-base-gui:3.0.5, LibreOffice v ${OFFICE_VER}"
+ENV OFFICE_PKG=LibreOffice_${OFFICE_VER}_Linux_x86-64_deb.tar.gz \
+    OFFICE_DIR=LibreOffice_${OFFICE_VER}.2_Linux_x86-64_deb \
+    OFFICE_URL=${OFFICE_HOST}/${OFFICE_PKG} \
+    LMSBUILD_VERSION="1.0.7" \
+    LMSBUILD_NAME="debian-libreoffice" \
+    LMSBUILD_DOCKER="ewsdocker/${LMSBUILD_NAME}:${LMSBUILD_VERSION}" \
+    LMSBUILD_PACKAGE="debian-base-gui:3.0.5, LibreOffice v ${OFFICE_VER}"
 
 # =========================================================================
 
