--- a/versions/0.1.0/Dockerfile
+++ b/versions/0.1.0/Dockerfile
@@ -7,7 +7,7 @@
 # =========================================================================
 #
 # @author Jay Wheeler.
-# @version 1.1.1
+# @version 1.1.0
 # @copyright © 2017, 2018. EarthWalk Software.
 # @license Licensed under the GNU General Public License, GPL-3.0-or-later.
 # @package debian-libreoffice
@@ -36,7 +36,7 @@
 #
 # =========================================================================
 # =========================================================================
-FROM ewsdocker/debian-openjre:0.1.0
+FROM ewsdocker/debian-base-gui:3.0.5
 
 MAINTAINER Jay Wheeler <EarthWalkSoftware@gmail.com>
 
@@ -78,15 +78,17 @@ ENV OFFICE_HOST=http://mirror.switch.ch/ftp/mirror/tdf/libreoffice/stable/${OFFI
 ENV OFFICE_PKG=LibreOffice_${OFFICE_VER}_Linux_x86-64_deb.tar.gz 
 ENV OFFICE_DIR=LibreOffice_${OFFICE_VER}.2_Linux_x86-64_deb 
 ENV OFFICE_URL=${OFFICE_HOST}/${OFFICE_PKG} 
-ENV LMSBUILD_VERSION="1.1.1" 
+ENV LMSBUILD_VERSION="1.1.0" 
 ENV LMSBUILD_NAME="debian-libreoffice" 
 ENV LMSBUILD_DOCKER="ewsdocker/${LMSBUILD_NAME}:${LMSBUILD_VERSION}" 
-ENV LMSBUILD_PACKAGE="debian-openjre:2.1.0, LibreOffice v ${OFFICE_VER}"
+ENV LMSBUILD_PACKAGE="debian-base-gui:3.0.5, LibreOffice v ${OFFICE_VER}"
 
 # =========================================================================
 
 RUN apt-get -y update \
- && apt-get -y upgrade \
+ && apt-get -y upgrade  \
+ && apt-get install -y --no-install-recommends \
+            openjdk-8-jre \
  && mkdir -p /usr/local/share/libreoffice \
  && cd /usr/local/share/libreoffice \
  && wget ${OFFICE_URL} \ 
