--- a/scripts/usr/local/share/applications/debian-libreoffice.desktop
+++ b/scripts/usr/local/share/applications/debian-libreoffice.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Encoding=UTF-8
-Exec=/home/jay/.local/bin/docker-deb-start-0.0.1 debian-libreoffice-1.1.6
+Exec=/home/jay/.local/bin/docker-deb-start-0.0.2 debian-libreoffice:9.5.0
 Icon=/home/jay/.local/share/icons/libreoffice6.0-writer.svg
 Type=Application
 Terminal=false
