--- a/scripts/usr/local/share/applications/debian-libreoffice-9.5.0.desktop
+++ b/scripts/usr/local/share/applications/debian-libreoffice-9.5.0.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 Exec=/home/jay/.local/bin/docker-deb-start-0.0.2 debian-libreoffice:9.5.0
-Icon=/home/jay/.local/share/icons/libreoffice6.0-writer.svg
+Icon=/home/jay/.local/share/icons/libreoffice6.0-start-center.svg
 Type=Application
 Terminal=false
 GenericName=LibreOffice
