--- a/scripts/usr/local/share/applications/debian-libreoffice-9.5.1.desktop
+++ b/scripts/usr/local/share/applications/debian-libreoffice-9.5.1.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Encoding=UTF-8
-Exec=/home/jay/.local/bin/docker-deb-start-0.0.2 debian-libreoffice:9.5.0
+Exec=/home/jay/.local/bin/docker-deb-start-0.0.2 debian-libreoffice:9.5.1
 Icon=/home/jay/.local/share/icons/libreoffice6.0-start-center.svg
 Type=Application
 Terminal=false
-GenericName=LibreOffice
-Name=LibreOffice-6.0
+GenericName=LibreOffice 9.5.1
+Name=LibreOffice 9.5.1
 StartupNotify=false
 Categories=Office
