--- a/scripts/usr/local/share/lms/debian-libreoffice-gtk2-9.5.5.desktop
+++ b/scripts/usr/local/share/lms/debian-libreoffice-gtk2-9.5.5.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Encoding=UTF-8
-Exec=/home/jay/.local/bin/docker-deb-start-0.0.2 debian-libreoffice:9.5.5
+Exec=/home/jay/.local/bin/docker-deb-start-0.0.2 debian-libreoffice:gtk2-9.5.5
 Icon=/home/jay/.local/share/icons/libreoffice-6.1.jpg
 Type=Application
 Terminal=false
-GenericName=LibreOffice 9.5.5
-Name=LibreOffice 9.5.5
+GenericName=LibreOffice gtk2-9.5.5
+Name=LibreOffice gtk2-9.5.5
 StartupNotify=false
 Categories=Office
