--- a/scripts/usr/local/share/lms/debian-libreoffice-9.5.10-gtk2.desktop
+++ b/scripts/usr/local/share/lms/debian-libreoffice-9.5.10-gtk2.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Encoding=UTF-8
-Exec=/home/jay/.local/bin/docker-deb-start-0.0.4 debian-libreoffice:9.5.9-gtk2
+Exec=/home/jay/.local/bin/docker-deb-start-0.0.4 debian-libreoffice:9.5.10-gtk2
 Icon=/home/jay/.local/share/icons/libreoffice-logo-1.png
 Type=Application
 Terminal=false
-GenericName=LibreOffice 9.5.9-gtk2
-Name=LibreOffice 9.5.9-gtk2
+GenericName=LibreOffice (9.5.10-gtk2)
+Name=LibreOffice (9.5.10-gtk2)
 StartupNotify=false
 Categories=Office
